--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -1,1 +1,15 @@
-<p>dashboard works!</p>
+<h3 class="text-black font-semibold mb-5 text-2xl font-serif">Dashboard Overview</h3>
+
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-20">
+  @for (item of dashboardSummary; track item.cardTitle) {
+  <app-report-card [data]="item"></app-report-card>
+  }
+</div>
+
+<h3 class="text-black font-semibold mb-5 text-2xl font-serif text-center">Leaves Details</h3>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+  @for(leaveItem of leavesSummary; track leaveItem.cardTitle){
+    <app-report-card [data]="leaveItem"></app-report-card>
+  }
+</div>
+
