--- a/src/app/pages/layout/layout.html
+++ b/src/app/pages/layout/layout.html
@@ -1,43 +1,20 @@
-<mat-sidenav-container class="h-screen">
+<!-- main Continer -->
+<div class="flex h-screen">
+  <!-- side nav -->
+  <div class="w-2xs bg-[#05776e] h-full">
+    <app-sidebar></app-sidebar>
+  </div>
 
-  <!-- Side Navigation -->
-  <mat-sidenav
-    #sidenav
-    [mode]="isMobile ? 'over' : 'side'"
-    [opened]="!isMobile"
-    class="w-64 bg-slate-900 text-white">
-
-    <div class="p-4 text-lg font-semibold border-b border-slate-700">
-      GR Reality HRMS
+  <!-- body continer -->
+  <div class="h-screen w-full flex flex-col bg-white">
+    <!-- body header -->
+    <div class="bg-white h-15 flex justify-start px-4 items-center shadow">
+      <h3 class="font-semibold text-base">HRMS PORTAL</h3>
     </div>
 
-    <mat-nav-list>
-      <a mat-list-item routerLink="/dashboard" (click)="isMobile && sidenav.close()">Dashboard</a>
-      <a mat-list-item routerLink="/employee" (click)="isMobile && sidenav.close()">Employee</a>
-      <a mat-list-item routerLink="/department" (click)="isMobile && sidenav.close()">Department</a>
-      <a mat-list-item routerLink="/leaves" (click)="isMobile && sidenav.close()">Leaves</a>
-      <a mat-list-item routerLink="/salary" (click)="isMobile && sidenav.close()">Salary</a>
-      <a mat-list-item routerLink="/setting" (click)="isMobile && sidenav.close()">Settings</a>
-    </mat-nav-list>
-
-  </mat-sidenav>
-
-  <!-- Main Content -->
-  <mat-sidenav-content class="bg-slate-100">
-
-    <!-- Top Bar (Mobile only) -->
-    <mat-toolbar color="primary" class="md:hidden flex items-center gap-2">
-      <button mat-icon-button (click)="sidenav.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span class="font-medium">HRMS Portal</span>
-    </mat-toolbar>
-
-    <!-- Page Content -->
-    <div class="p-4">
+    <!-- body container -->
+    <div class="bg-amber-100 flex-1 overflow-auto p-4">
       <router-outlet></router-outlet>
     </div>
-
-  </mat-sidenav-content>
-
-</mat-sidenav-container>
+  </div>
+</div>
